Oct 31, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- remove workaround for unreal to use gps for lan broadcasting, this is no
  longer necessary with qstat 2.5c

Oct 30, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Modify game command entry field to expand command line into full path if
  command is in the path.  Also executes guess_dir

Oct 30, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix some memleaks
- update german translation

Oct 29, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Fixup master_check_master_addr_prefix
- Create resolve_path function for use with guess_dir, user_fix_defaults etc

Oct 29, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- add some missing gettext calls
- fix function casting to int*
- use only first argument of command line for directory guessing

Oct 28, 2002: Alex <alex_b@users.sourceforge.net>
- Add guess_dir functionality to Suggest button and user_fix_defaults
- Change find_file_in_path to return entire filename including path
- Add (...) button to game directory
- Add Guess button to game directory - follows symlinks
- Changed UT2003 default port to 7777
- Changed UT2003 back to -ut2s as the next version of qstat (soon!)
  will support another UT2 query method that works off of gameport+1
  which is the same as the in-game browser in UT2003

Oct 28, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix source menu
- update german translation
- print number of servers when changing filters too

Oct 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- speed improvements for host and server lists
- fix plural form in reset_main_status_bar

Oct 27, 2002: Alex <alex_b@users.sourceforge.net>
- Bug fix - was able to enter same custom argument twice if case of game
  was different
- Changed UT2003 default port to 7787
- Changed UT2003 back to -gps for qstat, now uses query port from master
  server for server list, pulls hostport from server info when connecting