@@ -540,8 +540,12 @@ char* find_file_in_path(const char* files)
 	   
 	    if(!access(file,X_OK))
 	    {
-		found = g_strconcat(directories[j],"/",binaries[i],NULL);
-		// found = g_strdup(binaries[i]);
+		// If directory name is blank, don't add a / - happens if
+		// a complete path was passed
+		if (strlen(directories[j]))
+  		  found = g_strconcat(directories[j],"/",binaries[i],NULL);
+		else
+		  found = g_strdup(binaries[i]);
 		debug(3,"found %s in %s",binaries[i],directories[j]);
 	    }
 	    g_free(file);
